feat: ido stuff

--- a/config.org
+++ b/config.org
@@ -84,3 +84,40 @@ Displays all possible keybindings while typing
   :init
   (which-key-mode))
 #+end_src
+* IDO
+** Enable IDO mode
+#+begin_src emacs-lisp
+  (setq ido-enable-flex-matching nil)
+  (setq ido-create-new-buffer 'always)
+  (setq ido-everywhere t)
+  (ido-mode 1)
+#+end_src
+** ido-vertical package
+#+begin_src emacs-lisp
+  (use-package ido-vertical-mode
+    :ensure t
+    :init
+    (ido-vertical-mode 1))
+  (setq ido-vertical-define-keys 'C-n-and-C-p-only)
+#+end_src
+** smex package
+#+begin_src emacs-lisp
+  (use-package smex
+    :ensure t
+    :init (smex-initialize)
+    :bind
+    ("M-x" . smex))
+#+end_src
+** switch buffer
+#+begin_src emacs-lisp
+  (global-set-key (kbd "C-x C-b") 'ido-switch-buffer)
+#+end_src
+* Buffers
+** Enable Ibuffer
+#+begin_src emacs-lisp
+  (global-set-key (kbd "C-x b") 'ibuffer) 
+#+end_src
+*** Enable expert mode
+#+begin_src emacs-lisp
+(setq ibuffer-expert t)
+#+end_src
