--- a/config.org
+++ b/config.org
@@ -8,6 +8,11 @@
 #+end_src
 
 * Org
+** Org basic config
+#+begin_src emacs-lisp
+  ;; Dont split window when C-c '
+  (setq org-src-window-setup 'current-window)
+#+end_src
 ** Org Bullets
 #+begin_src emacs-lisp
   (use-package org-bullets
@@ -24,46 +29,60 @@
 #+end_src
 
 * Aliases
-** yes/no -> y/n
+** Change yes/no -> y/n
 #+begin_src emacs-lisp
 (defalias 'yes-or-no-p 'y-or-n-p)
 #+end_src
 
 * KB Shortcuts
-** ansi-term
+** Launch ansi-term
 #+begin_src emacs-lisp
 (global-set-key (kbd "<s-return>") 'ansi-term)
 #+end_src
 
 * Emacs global settings
-** scroll conservatively
+** Scroll conservatively
 #+begin_src emacs-lisp
 (setq scroll-conservatively 100)
 #+end_src
-** remove system beep
+** Remove system beep
 #+begin_src emacs-lisp
 (setq ring-bell-function 'ignore)
 #+end_src
-** highlight current line globally
+** Highlight current line globally
 #+begin_src emacs-lisp
 ;; Only enable in gui mode
 (when window-system (global-hl-line-mode 1))
 #+end_src
 
+** Subword advance
+#+begin_src emacs-lisp
+  ;; Advance one sub word instead of a whole one (camelCase)
+  (global-subword-mode 1)
+#+end_src
+** Electric
+#+begin_src emacs-lisp
+  (setq electric-pair-pairs
+	'(
+	  (?\( . ?\))
+	  (?\[ . ?\])
+	  ))
+  (electric-pair-mode t)
+#+end_src
 * Emacs GUI settings
-** remove toolbar
+** Remove toolbar
 #+begin_src emacs-lisp
 (tool-bar-mode -1)
 #+end_src
-** remove menu bar
+** Remove menu bar
 #+begin_src emacs-lisp
 (menu-bar-mode -1)
 #+end_src
-** remove scroll bar
+** Remove scroll bar
 #+begin_src emacs-lisp
 (scroll-bar-mode -1)
 #+end_src
-** remove startup dialog
+** Remove startup dialog
 #+begin_src emacs-lisp
 (setq inhibit-startup-message t)
 #+end_src
@@ -84,6 +103,18 @@ Displays all possible keybindings while typing
   :init
   (which-key-mode))
 #+end_src
+** Hungry delete
+#+begin_src emacs-lisp
+  (use-package hungry-delete
+    :ensure t
+    :config (global-hungry-delete-mode))
+#+end_src
+** Sudo edit
+#+begin_src emacs-lisp
+  (use-package sudo-edit
+    :ensure t
+    :bind ("C-c s u" . sudo-edit))
+#+end_src
 * IDO
 ** Enable IDO mode
 #+begin_src emacs-lisp
@@ -92,7 +123,7 @@ Displays all possible keybindings while typing
   (setq ido-everywhere t)
   (ido-mode 1)
 #+end_src
-** ido-vertical package
+** Use ido-vertical package
 #+begin_src emacs-lisp
   (use-package ido-vertical-mode
     :ensure t
@@ -100,7 +131,7 @@ Displays all possible keybindings while typing
     (ido-vertical-mode 1))
   (setq ido-vertical-define-keys 'C-n-and-C-p-only)
 #+end_src
-** smex package
+** Use smex package
 #+begin_src emacs-lisp
   (use-package smex
     :ensure t
@@ -108,7 +139,7 @@ Displays all possible keybindings while typing
     :bind
     ("M-x" . smex))
 #+end_src
-** switch buffer
+** Use switch buffer
 #+begin_src emacs-lisp
   (global-set-key (kbd "C-x C-b") 'ido-switch-buffer)
 #+end_src
@@ -149,7 +180,6 @@ Displays all possible keybindings while typing
     :ensure t
     :init (rainbow-mode 1))
 #+end_src
-
 * Switch windows
 #+begin_src emacs-lisp
   (use-package switch-window
@@ -181,3 +211,16 @@ Displays all possible keybindings while typing
     (other-window 1))
   (global-set-key (kbd "C-x 3") 'split-and-follow-vertically)
 #+end_src
+* Useful functions
+** Kill word
+#+begin_src emacs-lisp
+  (defun kill-whole-word ()
+    (interactive)
+    (backward-word)
+    (kill-word 1))
+  (global-set-key (kbd "C-c w w") 'kill-whole-word)
+#+end_src
+
+
+
+
