--- a/config.org
+++ b/config.org
@@ -6,7 +6,6 @@
   (interactive (list my-term-shell)))
 (ad-activate 'ansi-term)
 #+end_src
-
 * Org
 ** Org basic config
 #+begin_src emacs-lisp
@@ -20,26 +19,22 @@
     :config
     (add-hook 'org-mode-hook (lambda () (org-bullets-mode))))
 #+end_src
-
 * Saves
 ** Disable backups and auto save
 #+begin_src emacs-lisp
   (setq save-backup-file nil)
   (setq auto-save-default nil)
 #+end_src
-
 * Aliases
 ** Change yes/no -> y/n
 #+begin_src emacs-lisp
 (defalias 'yes-or-no-p 'y-or-n-p)
 #+end_src
-
 * KB Shortcuts
 ** Launch ansi-term
 #+begin_src emacs-lisp
-(global-set-key (kbd "<s-return>") 'ansi-term)
+(global-set-key (kbd "C-c t") 'ansi-term)
 #+end_src
-
 * Emacs global settings
 ** Scroll conservatively
 #+begin_src emacs-lisp
@@ -54,7 +49,6 @@
 ;; Only enable in gui mode
 (when window-system (global-hl-line-mode 1))
 #+end_src
-
 ** Subword advance
 #+begin_src emacs-lisp
   ;; Advance one sub word instead of a whole one (camelCase)
@@ -251,10 +245,6 @@ Displays all possible keybindings while typing
     (kill-word 1))
   (global-set-key (kbd "C-c w w") 'kill-whole-word)
 #+end_src
-
-
-
-
 ** Copy line
 #+begin_src emacs-lisp
   (defun copy-whole-line ()
@@ -281,4 +271,59 @@ Displays all possible keybindings while typing
     :ensure t
     :init
     (add-hook 'after-init-hook 'global-company-mode))
+#+end_src
+* Modeline
+** Spaceline
+#+begin_src emacs-lisp
+  (use-package spaceline
+    :ensure t
+    :config
+    (require 'spaceline-config)
+    (setq powerline-default-separator (quote arrow))
+    (spaceline-spacemacs-theme))
+#+end_src
+** Diminish
+#+begin_src emacs-lisp
+  (use-package diminish
+    :ensure t
+    :init
+    (mapc #'diminish
+	  '(hungry-delete-mode
+	    beacon-mode
+	    which-key-mode
+	    subword-mode
+	    rainbow-mode)))
+#+end_src
+* Dmenu
+#+begin_src emacs-lisp
+  (use-package dmenu
+    :ensure t
+    :bind
+    ("C-c d" . 'dmenu))
+#+end_src
+* Symon
+#+begin_src emacs-lisp
+  (use-package symon
+    :ensure t
+    :bind
+    ("C-c y" . symon-mode))
+#+end_src
+* EXWM
+ #+begin_src emacs-lisp
+   (use-package exwm
+     :ensure t
+     :config
+     (require 'exwm-config)
+     (exwm-config-default))
+ #+end_src
+** System tray
+#+begin_src emacs-lisp
+  (require 'exwm-systemtray)
+  (exwm-systemtray-enable)
+#+end_src
+** Workspaces
+#+begin_src emacs-lisp
+  (global-set-key (kbd "C-c k") 'exwm-workspace-delete)
+  (global-set-key (kbd "C-c j") 'exwm-workspace-swap)
+  (global-set-key (kbd "C-c l") 'exwm-workspace-switch)
 #+end_src
