--- a/config.org
+++ b/config.org
@@ -386,6 +386,11 @@ Displays all possible keybindings while typing
     (projectile-mode +1)
     (define-key projectile-mode-map (kbd "C-c p") 'projectile-command-map))
 #+END_SRC
+** Ripgrep for projectile
+#+BEGIN_SRC emacs-lisp
+  (use-package ripgrep
+    :ensure t)
+#+END_SRC
 * Node js path
 #+BEGIN_SRC emacs-lisp
   (setq exec-path (append exec-path '("~/.nvm/versions/node/v14.15.0/bin")))
@@ -476,3 +481,25 @@ Displays all possible keybindings while typing
     :after treemacs magit
     :ensure t)
 #+END_SRC
+* Magit
+#+BEGIN_SRC emacs-lisp
+  (use-package magit
+    :ensure t
+    :bind (("C-x g" . magit-status)
+	   ("C-x C-g" . magit-status)))
+#+END_SRC
+* Load envs for mac os
+#+BEGIN_SRC emacs-lisp
+  (use-package exec-path-from-shell
+    :ensure t
+    :if (memq window-system '(mac ns))
+    :config
+    (setq exec-path-from-shell-arguments '("-l"))
+    (exec-path-from-shell-initialize)
+    (exec-path-from-shell-copy-envs
+     '("GOPATH" "GO111MODULE" "GOPROXY"
+       "NPMBIN" "LC_ALL" "LANG" "LC_TYPE"
+       "SSH_AGENT_PID" "SSH_AUTH_SOCK" "SHELL"
+       "JAVA_HOME")))
+#+END_SRC
+
