--- a/config.org
+++ b/config.org
@@ -488,18 +488,22 @@ Displays all possible keybindings while typing
     :bind (("C-x g" . magit-status)
 	   ("C-x C-g" . magit-status)))
 #+END_SRC
-* Load envs for mac os
-#+BEGIN_SRC emacs-lisp
-  (use-package exec-path-from-shell
-    :ensure t
-    :if (memq window-system '(mac ns))
-    :config
-    (setq exec-path-from-shell-arguments '("-l"))
-    (exec-path-from-shell-initialize)
-    (exec-path-from-shell-copy-envs
-     '("GOPATH" "GO111MODULE" "GOPROXY"
-       "NPMBIN" "LC_ALL" "LANG" "LC_TYPE"
-       "SSH_AGENT_PID" "SSH_AUTH_SOCK" "SHELL"
-       "JAVA_HOME")))
-#+END_SRC
-
+* EXWM
+ #+begin_src emacs-lisp
+   ;; (use-package exwm
+   ;;   :ensure t
+   ;;   :config
+   ;;   (require 'exwm-config)
+   ;;   (exwm-config-default))
+ #+end_src
+** System tray
+#+begin_src emacs-lisp
+  ;; (require 'exwm-systemtray)
+  ;; (exwm-systemtray-enable)
+#+end_src
+** Workspaces
+#+begin_src emacs-lisp
+  ;; (global-set-key (kbd "C-c k") 'exwm-workspace-delete)
+  ;; (global-set-key (kbd "C-c j") 'exwm-workspace-swap)
+  ;; (global-set-key (kbd "C-c l") 'exwm-workspace-switch)
+#+end_src
