--- a/config.org
+++ b/config.org
@@ -313,52 +313,6 @@ Displays all possible keybindings while typing
   (use-package eldoc
     :diminish eldoc-mode)
 #+END_SRC
-* Flycheck
-#+BEGIN_SRC emacs-lisp
-  (use-package flycheck
-    :ensure t
-    :init (global-flycheck-mode))
-#+END_SRC
-* Tide + ts-mode
-#+BEGIN_SRC emacs-lisp
-  (use-package tide
-    :ensure t
-    :init
-    (setq tide-tsserver-executable "/Users/adrienblavier/.nvm/versions/node/v12.16.1/bin/tsserver")
-    :after (typescript-mode company flycheck)
-    :hook ((typescript-mode . tide-setup)
-	   (typescript-mode . tide-hl-identifier-mode)
-	   (before-save . tide-format-before-save)))
-
-  (require 'web-mode)
-  (add-to-list 'auto-mode-alist '("\\.tsx\\'" . web-mode))
-  (add-hook 'web-mode-hook
-	    (lambda ()
-	      (when (string-equal "tsx" (file-name-extension buffer-file-name))
-		(setup-tide-mode))))
-  ;; enable typescript-tslint checker
-  (flycheck-add-mode 'typescript-tslint 'web-mode)
-#+END_SRC
-* Web mode
-#+BEGIN_SRC emacs-lisp
-  (use-package web-mode
-    :ensure t
-    :mode (("\\.jsx\\'" . web-mode)
-	     ("\\.tsx\\'" . web-mode)
-	     ("\\.html\\'" . web-mode)
-	     ("\\.vue\\'" . web-mode)
-	     ("\\.json\\'" . web-mode))
-    :commands web-mode
-    :config
-    (setq company-tooltip-align-annotations t)
-    (setq web-mode-markup-indent-offset 2)
-    (setq web-mode-css-indent-offset 2)
-    (setq web-mode-code-indent-offset 2)
-    (setq web-mode-enable-part-face t)
-    (setq web-mode-content-types-alist
-	    '(("jsx" . "\\.js[x]?\\'")))
-    )
-#+END_SRC
 * Projectile
 #+BEGIN_SRC emacs-lisp
   (use-package projectile
@@ -372,9 +326,29 @@ Displays all possible keybindings while typing
   (use-package ripgrep
     :ensure t)
 #+END_SRC
-* Node js path
+* LSP
 #+BEGIN_SRC emacs-lisp
-  ;;(setq exec-path (append exec-path '("~/.nvm/versions/node/v14.15.0/bin")))
+  ;; prefix for lsp-command-keymap
+  (setq lsp-keymap-prefix "C-c l")
+
+  (use-package lsp-mode
+    :ensure t
+    :hook (
+	    (typescript-mode . lsp)
+	    (lsp-mode . lsp-enable-which-key-integration))
+    :commands lsp)
+
+  ;; Optional lsp deps
+  (use-package lsp-ui :ensure t :commands lsp-ui-mode)
+  (use-package lsp-ivy :ensure t :commands lsp-ivy-workspace-symbol)
+  (use-package lsp-treemacs :ensure t :commands lsp-treemacs-errors-list)
+
+  (use-package typescript-mode
+    :ensure t
+    :hook
+    (typescript-mode . lsp)
+    :mode (("\\.ts\\'" . typescript-mode)
+	   ("\\.tsx\\'" . typescript-mode)))
 #+END_SRC
 * Treemacs
 #+BEGIN_SRC emacs-lisp
