--- a/config.org
+++ b/config.org
@@ -462,3 +462,17 @@ Displays all possible keybindings while typing
   ;; (global-set-key (kbd "C-c j") 'exwm-workspace-swap)
   ;; (global-set-key (kbd "C-c l") 'exwm-workspace-switch)
 #+end_src
+* Load envs for mac os
+#+BEGIN_SRC emacs-lisp
+  (use-package exec-path-from-shell
+    :ensure t
+    :if (memq window-system '(mac ns))
+    :config
+    (setq exec-path-from-shell-arguments '("-l"))
+    (exec-path-from-shell-initialize)
+    (exec-path-from-shell-copy-envs
+     '("GOPATH" "GO111MODULE" "GOPROXY"
+       "NPMBIN" "LC_ALL" "LANG" "LC_TYPE"
+       "SSH_AGENT_PID" "SSH_AUTH_SOCK" "SHELL"
+       "JAVA_HOME")))
+#+END_SRC
