--- a/config.org
+++ b/config.org
@@ -494,15 +494,9 @@ Displays all possible keybindings while typing
 #+BEGIN_SRC emacs-lisp
   (use-package exec-path-from-shell
     :ensure t
-    :if (memq window-system '(mac ns))
     :config
-    (setq exec-path-from-shell-arguments '("-l"))
-    (exec-path-from-shell-initialize)
-    (exec-path-from-shell-copy-envs
-     '("GOPATH" "GO111MODULE" "GOPROXY"
-       "NPMBIN" "LC_ALL" "LANG" "LC_TYPE"
-       "SSH_AGENT_PID" "SSH_AUTH_SOCK" "SHELL"
-       "JAVA_HOME")))
+    (when (memq window-system '(mac ns x))
+      (exec-path-from-shell-initialize)))
 #+END_SRC
 * SLY
 #+begin_src emacs-lisp
